#238 closed bug (fixed)
physical vmware haiku boot works - in native mode the bootloader cannot find a device
Reported by: | Owned by: | axeld | |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | System/Kernel | Version: | R1/pre-alpha1 |
Keywords: | Cc: | diver | |
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Motherboard:
CPU Type: Mobile Intel Pentium IIIE, 500 MHz (5 x 100) Motherboard Name: BM 26458PG Motherboard Chipset: Intel 82440BX/ZX System Memory: 256 MB (SDRAM) BIOS Type: IBM (11/30/99) Video Adapter: NeoMagic MagicGraph256ZX driver (4091 KB)
SAMSUNG MP0402H (40 GB, 5400 RPM, Ultra-ATA/100)
C: (FAT32) 9529 MB
then some logical devices in an extended partition haiku got
$ makebootable -full /haiku Using full mode bootsector /dev/disk/ide/ata/0/master/0/0_5 successfully made bootable. $
/haiku space is about 10000MB
/dev/disk/ide/ata/0/master/0/0_4 is used for beos and after /haiku at the moment there is unused space. Maybe a big bfs or fat32 partition will follow.
if i install a second beos or zeta on /haiku partition, they all will boot!
HAIKU boots too, but not natve. The only way is to use vmware which I configured using the whole physical hdd device. BeOS bootman starts and I can choose between win2k, beos and haiku. All will run. Choosing haiku I see the fastest BeOS in vmware. :)
In native mode, the HAIKU bootloader doesn't find an boot device. I can scan for a device but it doesn't help. The only way is to restart. Then the notebook boots again and I can do my choice in bootman again.
At the moment I could not find my 2.5 USB adapter to install HAIKU on a new whole hdd for testing. I will search it.
My HAIKU build was rev16537_raw.tar.bz2 (others before cause the same problem)
On my desktop pc I have a native running HAIKU
nick #haiku is b3w
Attachments (2)
Change History (22)
comment:1 by , 16 years ago
Summary: | physical vmware haiku boot works - in native mode the bootloader cannot find a device → physical vmware haiku boot works - in native mode the bootloader cannot find a device |
---|
comment:2 by , 16 years ago
Cc: | added |
---|
comment:3 by , 16 years ago
comment:4 by , 16 years ago
yes it does!
i hope i get back my hdd adapters this weekend
to test it with a full formated hdd consiting of one whole bfs partition
comment:5 by , 16 years ago
I installed HAIKU on a new blank hdd. First I tested it with BeOS R5 Pro and BeOS boots. I delete the BeOS files and copied HAIKU on it. HAIKU does not boot.
HAIKU Boot Loader says Select boot volume (Current: None)
comment:6 by , 16 years ago
Description: | modified (diff) |
---|---|
Platform: | → All |
Bug #874 is a duplicate of this bug, and provides additional info.
comment:7 by , 16 years ago
Does anyone having this problem have a serial debugging cable to get more output? I could then put some extra debug output into the bootloader to find the cause.
comment:9 by , 16 years ago
I've added some more debug output in hrev18977. Can you please provide logs from booting Haiku (until the line "load kernel..." if it comes) natively and via VMware or whatever you're using? Thanks in advance!
comment:10 by , 16 years ago
Axel, i just connected my serial cable to both com prots of my two pc's, it's now connected to lowest ports. I'm using HyperTerminal app from XP, where i created a new connection, selected com2 and speed 115200. After that, i turned on my second pc and select haiku from bootman, but i don't get any output. What i'm doing wrong?
comment:11 by , 16 years ago
I think the most probable fault is getting the wrong serial port. Can you boot into an OS with a terminal in both computers (like BeOS with SerialConnect)? Then you could at least find out which serial ports you should be using. Haiku by default puts out everything at the first serial port a.k.a. COM1 in Windows. This setting cannot even be changed for the boot loader. HTH.
by , 16 years ago
comment:12 by , 16 years ago
http://haiku-os.org/trac/attachment/ticket/238/debug.txt is what i get on native boot. serial log from vmware will follow...
comment:13 by , 16 years ago
Maybe those two bugs aren't alike after all: judging from the boot log, your computer's BIOS report a 128 GB HD, and our boot loader refuses the last partition that contains the logical partitions because it's outside of the drive's range. Maybe we need to be a little bit less strict about this for extended partitions :-/ I'll see what I can do about that.
comment:14 by , 16 years ago
Version: | → R1 development |
---|
My bios thinks that it's a 136Gb hdd, but it's 300Gb in fact. Axel, this fix is very important for me, as my windows installation is broken and i can't continue ro test in vmware, so i rather move on to test on real hardware, if only i could boot haiku :-(
comment:15 by , 16 years ago
I've added a work-around in the Intel paritioning module in hrev18988. Can you check if this solves your problem? (this also applies to the original bug reporter, a.k.a. b3w)
comment:16 by , 16 years ago
I made a typo in that revision, you have to test with hrev18991 instead.
comment:17 by , 16 years ago
Great! hrev18991 fixed my boot problems, it just took 2 seconds to show boot logo, before i don't have this delay, probably because of massive debig output? Back to bug report mode ;-)
comment:18 by , 16 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Yes, that should be caused by the debug output - I keep it turned on for a while to be sure that no other bugs (like #882) pop up.
comment:19 by , 16 years ago
great, now HAIKU runs fine too on my old Thinkpad. Thanks for your common work bazara.net and axeld
Does it still happens?