* Turned on debugging in the Intel partitioning system add-on, and the partition   stuff of the boot loader to help with bug #238. * Minor cleanup (added license headers, fixed debug output)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18977 a95241bf-73f2-0310-859d-f6bbb57e9c96